@@ -210,7 +210,6 @@ fi
 AC_SUBST(NO_MODULE_VERSION)
 
 AC_SUBST(KINC)
-BKCFLAGS="-I$KINC $BKCFLAGS"
 AC_SUBST(BKCFLAGS)
 
 MODINSTALLDIR=/lib/modules/$KVERS
